test/src/e2e_vm_tests/test_programs/should_fail/attributes_invalid_args/src/main.sw
//! Inner doc comment supports multiple.
//! Inner doc comment supports multiple.
//! Inner doc comment supports multiple.
library;

// Modules listed in the order of enum variants ;-)
mod unknown_attr;
mod storage_attr;
mod inline_attr;
mod test_attr;
mod payable_attr;
mod allow_attr;
mod cfg_attr;
mod deprecated_attr;
mod fallback_attr;

/// Outer doc comment supports multiple.
/// Outer doc comment supports multiple.
/// Outer doc comment supports multiple.
pub struct S { }
